# extract_nasdaq

./: docker-compose.yaml  pyproject.toml
ddl/init/: initialization_base.sql  initialization_nasdaq_data.sql
ddl/landing/: landing_objects.sql
ddl/meta/: meta_objects.sql
ddl/raw/: raw_objects.sql
ddl/staging/: staging_objects.sql
nasdaq_data/: .user.yml  dbt_project.yml  profiles.yml
nasdaq_data/macros/markov/: transition_matrix.sql
nasdaq_data/models/business/: hist_1d_lin_reg_moving_14d.sql  markov_trans_matrix_1d_intra_symb_rel_oc.sql  markov_trans_matrix_1d_intra_symbol_co.sql  markov_trans_matrix_1d_intra_symbol_olhc.sql
nasdaq_data/models/raw/historical_1d_quotes/: historical_1d_quotes.sql  historical_1d_quotes_cleansed.sql  historical_1d_quotes_schema.yml
nasdaq_data/sources/: sources_staging.yaml
src/extract_nasdaq/: main.py
